web/resources/css/index.css
#map {
    width: 100%;
    min-width: 650px;
    min-height: 100px;
    margin: 0;
    position: absolute;
}

/* -----------------
   START MENU REGION 
   ----------------- */

#map-menu {
    width: 260px; /* Total width will be 305px after padding and shadow */
    min-height: 100px;
    left: -305px;
    position: absolute;
    padding: 20px;
    background-color: #f8f8f8;
    box-shadow: 5px 0px 5px rgba(0,0,0,0.15);
    z-index: 3;
}

#map-menu-title {
    float: left;
    margin-top: 2px;
    font-size: 13px;
    text-transform: uppercase;
    color: #bbbbbb;
}

#map-menu-close {
    width: 20px;
    float: right;
    opacity: 0.7;
    cursor: pointer;
}

#map-menu-change-loc {
    float: left;
    width: 198px;
    margin-top: 25px;
    border-radius: 3px 0 0 3px;
}

#map-menu-change-loc-btn {
    width: 40px;
    height: 39px;
    margin-top: 24px;
    float: left;
    background-color: #79aceb;
    border: 1px #5090e0 solid;
    border-radius: 0 3px 3px 0;
}

#map-menu-change-loc-btn img {
    width: 20px;
}

.map-menu-divider {
    display: block;
    width: 100%;
    height: 1px;
    margin: 13px 0 13px 0;
    border: 0;
    border-top: 1px solid #dddddd;
}

#map-menu-filter-keyword-form\:map-menu-filter-keyword-input {
    margin: 2px 0 25px 0;
    width: 238px;
    float: left;
    border-radius: 3px;
}

#map-menu-sort-filter {
    font-size: 15px;
}

#selectfilterForm\:map-menu-sort-select {
    margin-left: 10px;
    width: 167px;
    padding: 5px;
    height: 32px;
}

#map-menu-distance-filter {
    float: left;
    font-size: 15px;
}

#filterForm\:map-menu-distance-input {
    width: 50px;
    padding: 5px;
    margin-bottom: 25px;
}

#map-menu-pins-list {
    width: 260px;
    float: left;
    clear: both;
    overflow-y: auto;
    margin-top: 5px;
}

.pins-list-pin-wrapper {
    float: left;
    width: 242px;
    overflow: hidden;
    clear: both;
}

.pins-list-pin-text-wrapper {
    float: left;
    width: 165px;
    margin-bottom: 10px;
}

.pins-list-pin-title {
    width: 165px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 18px;
    margin-bottom: 5px;
}

.pins-list-pin-desc {
    width: 165px;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 15px;
    line-height: 17px;
    height: 34px;
}

.pins-list-pin-img-wrapper {
    height: 50px;
    width: 50px;
    margin: 8px 10px 0 0;
    float: right;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
}

.pins-list-pin-img {
    display: inline;
    margin: 0 auto;
    height: 100%;
    width: auto;
    min-width: 50px;
    min-height: 50px;
}

.pins-list-pin-view {
    float: left;
    clear: both;
    font-size: 13px;
    cursor: pointer;
    color: #5090e0;
}

.pins-list-pin-date {
    float: left;
    font-size: 13px;
    color: #777777;
}

.pins-list-pin-votes {
    float: left;
    font-size: 13px;
    color: #777777;
}

.pins-list-pin-distance-desc {
    float: left;
    font-size: 13px;
    color: #777777;
}

.pins-list-pin-divider {
    display: block;
    width: 230px;
    height: 1px;
    margin: 15px 0 15px 0;
    border: 0;
    border-top: 1px solid #cccccc;
    float: left;
    clear: both;
}

/* ---------------
   END MENU REGION 
   --------------- */

/* ---------------------
   START FULL PIN REGION 
   --------------------- */

#map-menu-full-pin {
    display: none;
    position: absolute;
    left: 0px;
    top: 0px;
    width: 260px;
    padding: 20px;
    background-color: #f8f8f8;
    z-index: 4;
}

#render-full-pin {
    overflow: hidden;
}

#full-pin-close {
    width: 20px;
    float: right;
    opacity: 0.7;
    cursor: pointer;
}

#full-pin-top-wrapper {
    width: 100%;
    clear: both;
    float: left;
    margin-top: 10px;
    overflow: hidden;
}

#full-pin-vote-wrapper {
    margin-top: 15px;
    float: left;
    width: 26px;
    overflow: hidden;
    text-align: center;
}

#full-pin-upvote {
    width: 26px;
    cursor: pointer;
    opacity: 0.7;
    margin-bottom: 3px;
}

#full-pin-downvote {
    width: 26px;
    margin-top: 7px;
    cursor: pointer;
    opacity: 0.7;
}

#full-pin-votes {
    line-height: 18px;
    font-size: 18px;
    color: #555555;
}

#full-pin-pic-wrapper {
    display: inline-block;
    height: 100px;
    width: 100px;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
    margin-left: 50px;
}

#full-pin-pic {
    display: inline;
    margin: 0 auto;
    height: 100%;
    width: auto;
    min-width: 100px;
    min-height: 100px;
}

#full-pin-title {
    float: left;
    margin-top: 15px;
    font-size: 20px;
}

#full-pin-desc {
    float: left;
    clear: both;
    margin-top: 10px;
    font-size: 15px;
}

#full-pin-details {
    font-size: 13px;
    color: #777777;
    float: left;
    clear: both;
    margin-top: 10px;
}

.full-pin-divider {
    display: block;
    float: left;
    clear: left;
    width: 260px;
    height: 1px;
    margin: 20px 0 20px 0;
    border: 0;
    border-top: 1px solid #cccccc;
}

#full-pin-comments-wrapper {
    width: 260px;
    float: left;
    clear: both;
    overflow-y: auto;
}

#comment\:full-pin-post-comment {
    width: 210px;
    height: 45px;
    resize:vertical;
}

#comment\:full-pin-post-comment:focus {
    outline: none;
}

#comment\:full-pin-post-comment-btn {
    font-size: 14px;
    padding: 8px 10px 8px 10px;
    background-color: #5090e0;
    float: left;
    margin: -5px 11px 15px 125px;
}

#full-pin-comments-list {
    float: left;
    clear: both;
    margin-top: 0px;
}

#full-pin-comment-user {
    font-size: 14px;
    color: #e35353;
}

#full-pin-comment-msg {
    font-size: 14px;
    margin: 3px 0 5px 0;
}

#full-pin-comment-date {
    font-size: 13px;
    color: #777777;
}

.full-pin-comment-divider {
    display: block;
    float: left;
    clear: left;
    width: 230px;
    height: 1px;
    margin: 10px 0 10px 0;
    border: 0;
    border-top: 1px solid #cccccc;
}

/* -------------------
   END FULL PIN REGION 
   ------------------- */

/* -------------------------
   START MAP OVERLAYS REGION 
   ------------------------- */

#map-loading {
    width: 100%;
    min-width: 650px;
    min-height: 100px;
    margin: 0;
    position: absolute;
    background: url(../images/loading.gif) no-repeat;
    background-size: 64px 22px;
    background-color: #ffffff;
    z-index: 6;
}

#show-menu {
    width: 40px;
    position: absolute;
    top: 25px;
    left: 28px;
    cursor: pointer;
    z-index: 2;
}

#map-message-wrapper {
    display: none;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    text-align: center;
    z-index: 1;
}

#map-message {
    display: inline-block;
    visibility: hidden;
    background-color: rgba(0,0,0,0.4);
    margin: 0 auto;
    margin-top: 15px;
    padding: 8px 20px 8px 20px;
    color: #ffffff;
    border-radius: 20px;
}

#hidden-add-pin-hover {
    position: absolute;
    top: 0;
    left: 0;
    width: 70px;
    height: 70px;
    z-index: -1;
}

.add-pin-button {
    position: absolute;
    right: 0;
    bottom: 0;
    margin: 0 25px 30px 0;
    width: 70px;
    height: 70px;
    background: url(../images/add-pin.png) no-repeat bottom right;
    background-size: 100%;
    cursor: pointer;
    z-index: 3;
}

.add-pin-button:hover {
    background: url(../images/add-pin-hover.png) no-repeat bottom right;
    background-size: 100%;
}

/* -----------------------
   END MAP OVERLAYS REGION 
   ----------------------- */

/* -------------------
   START DIALOG REGION 
   ------------------- */

#create-pin-dialog {
    display: none;
    background-color: #f0f0f0;
}

#create-pin-form\:title {
    font-family: "Franklin Gothic Book" !important;
    margin-top: 7px;
    width: 246px;
}

#create-pin-form\:description {
    font-family: "Franklin Gothic Book" !important;
    width: 246px;
    height: 60px;
    resize:vertical;
}

#create-pin-form\:browse-btn {
    width: 266px;
    margin: 5px 0 12px 0;
    font-family: "Franklin Gothic Book" !important;
    font-size: 14px;
}

#create-pin-form\:create-btn {
    float: right;
    font-family: "Franklin Gothic Book" !important;
    margin: 0 0 10px 0;
}

#create-pin-form\:cancel-btn {
    float: right;
    font-family: "Franklin Gothic Book" !important;
    background-color: #999999;
    margin: 0 0 10px 10px;
}

#enter-loc-dialog {
    display: none;
    background-color: #f0f0f0;
}

#enter-loc-message {
    font-family: "Franklin Gothic Book" !important;
    margin-top: 8px;
    width: 346px;
}

#enter-loc-form\:loc {
    font-family: "Franklin Gothic Book" !important;
    margin-top: 15px;
    width: 346px;
}

#enter-loc-form\:continue-btn {
    float: right;
    font-family: "Franklin Gothic Book" !important;
    margin: 0 0 10px 0;
}

/* -----------------
   END DIALOG REGION 
   ----------------- */

/* --------------------
   START MAP PIN REGION
   -------------------- */

.pin-wrapper {
    position: absolute;
    height: 50px;
}

.pin-pic-wrapper {
    height: 40px;
    width: 40px;
    margin: 3px 6px 0 0;
    float: left;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
    box-shadow: 0 2px 3px 1px rgba(0,0,0,0.2);
}

.pin-pic {
    float: left;
    cursor: pointer;
    display: inline;
    margin: 0 auto;
    height: 100%;
    width: auto;
    min-width: 40px;
    min-height: 40px;
}

.pin-text { 
    display: none;
    height: 27px;
    width: auto;
    max-width: 170px;
    font-size: 14px;
    padding: 9px 8px 0 8px;
    margin-top: 4px;
    float: left;
    background-color: white;
    border-radius: 3px;
    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.pin-text-arrow {
    display: none;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    border-color: rgba(255, 255, 255, 0);
    border-right-color: #ffffff;
    border-width: 7px;
    float: left;
    margin-left: -10px;
    margin-top: 15px;
}

/* ------------------
   END MAP PIN REGION
   ------------------ */

/* Wtf is this and how did it come to be */
#JSFFrameId {
    display: none;
}

